major updates again

--- a/public/about.html
+++ b/public/about.html
@@ -98,38 +98,23 @@
       <h2>About WaterLogged: Meet the Team</h2>
       <div class="team-container"> <!-- Grid container for team boxes -->
         <div class="team-box" data-name="Charlie" data-blurb="Environmental concentration. Interested in coastal resilience and green development." data-image="images/charlie.png" style="margin-bottom: 20px;">
-          <picture>
-            <source srcset="images/charlie.png" type="image/webp">
-            <img src="images/charlie.png" alt="Charlie - Environmental concentration, interested in coastal resilience and green development" style="width: 100%; height: 100%; object-fit: cover; border-radius: 10px;">
-          </picture>
+          <img src="images/charlie.png" alt="Charlie - Environmental concentration" width="150" height="150" loading="lazy" style="width: 100%; height: 100%; object-fit: cover; border-radius: 10px;">
           <p style="text-align: center; margin-top: 5px; font-weight: bold;">Charlie</p>
         </div>
         <div class="team-box" data-name="Annie" data-blurb="Environmental concentration. Interested in green infrastructure and environmental health." data-image="images/annie.jpg" style="margin-bottom: 20px;">
-          <picture>
-            <source srcset="images/annie.jpg" type="image/webp">
-            <img src="images/annie.jpg" alt="Annie - Environmental concentration, interested in green infrastructure and environmental health" style="width: 100%; height: 100%; object-fit: cover; border-radius: 10px;">
-          </picture>
+          <img src="images/annie.jpg" alt="Annie - Environmental concentration" width="150" height="150" loading="lazy" style="width: 100%; height: 100%; object-fit: cover; border-radius: 10px;">
           <p style="text-align: center; margin-top: 5px; font-weight: bold;">Annie</p>
         </div>
         <div class="team-box" data-name="Peyton" data-blurb="Environmental concentration. Interested in ecology, biology, manufacturing." data-image="images/peyton.jpg" style="margin-bottom: 20px;">
-          <picture>
-            <source srcset="images/peyton.jpg" type="image/webp">
-            <img src="images/peyton.jpg" alt="Peyton - Environmental concentration, interested in ecology, biology, manufacturing" style="width: 100%; height: 100%; object-fit: cover; border-radius: 10px;">
-          </picture>
+          <img src="images/peyton.jpg" alt="Peyton - Environmental concentration" width="150" height="150" loading="lazy" style="width: 100%; height: 100%; object-fit: cover; border-radius: 10px;">
           <p style="text-align: center; margin-top: 5px; font-weight: bold;">Peyton</p>
         </div>
         <div class="team-box" data-name="Nava" data-blurb="Health concentration. Interested in BME / Medical Devices. Research." data-image="images/nava.jpg" style="margin-bottom: 20px;">
-          <picture>
-            <source srcset="images/nava.jpg" type="image/webp">
-            <img src="images/nava.jpg" alt="Nava - Health concentration, interested in BME / Medical Devices, Research" style="width: 100%; height: 100%; object-fit: cover; border-radius: 10px;">
-          </picture>
+          <img src="images/nava.jpg" alt="Nava - Health concentration" width="150" height="150" loading="lazy" style="width: 100%; height: 100%; object-fit: cover; border-radius: 10px;">
           <p style="text-align: center; margin-top: 5px; font-weight: bold;">Nava</p>
         </div>
         <div class="team-box" data-name="Will" data-blurb="Environmental concentration. Interested in Biotech, BME, and Materials Science." data-image="images/will.png" style="margin-bottom: 20px;">
-          <picture>
-            <source srcset="images/will.png" type="image/webp">
-            <img src="images/will.png" alt="Will - Environmental concentration, interested in Biotech, BME, and Materials Science" style="width: 100%; height: 100%; object-fit: cover; border-radius: 10px;">
-          </picture>
+          <img src="images/will.png" alt="Will - Environmental concentration" width="150" height="150" loading="lazy" style="width: 100%; height: 100%; object-fit: cover; border-radius: 10px;">
           <p style="text-align: center; margin-top: 5px; font-weight: bold;">Will</p>
         </div>
       </div>
