--- a/public/about.html
+++ b/public/about.html
@@ -38,8 +38,9 @@
       font-weight: 400;
       text-align: center;
       color: #555;
-      margin: 20px auto;
-      max-width: 600px;
+      margin: 80px auto 40px;
+      max-width: 800px;
+      padding: 0 20px;
     }
     
     /* Improved menu styles to match photos.html */
