--- a/public/index.html
+++ b/public/index.html
@@ -38,9 +38,10 @@
       font-weight: 400;
       text-align: center;
       color: #555;
-      margin: 20px auto;
-      max-width: 600px;
-      visibility: hidden; /* Prevent layout shift while font loads */
+      margin: 80px auto 40px;
+      max-width: 800px;
+      padding: 0 20px;
+      visibility: visible;
     }
     /* Inline critical Google Fonts CSS */
     @font-face {
