--- a/public/photos.html
+++ b/public/photos.html
@@ -31,10 +31,14 @@
     }
     
     .subtitle {
+      font-family: 'Roboto', sans-serif;
+      font-size: 1.5rem;
+      font-weight: 400;
       text-align: center;
-      margin: 20px;
-      margin-top: 80px;
-      font-size: 1.2rem;
+      color: #555;
+      margin: 80px auto 40px;
+      max-width: 800px;
+      padding: 0 20px;
     }
     
     main {
